argo/wailord/svcs/fluidd/templates/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  labels:
    tailscale.com/proxy-class: "jscknet"
  name: big-lebowski-ingress
spec:
  ingressClassName: tailscale
  rules:
    - host: big-lebowski-fe
      http:
        paths:
          - backend:
              service:
                name: fluidd-nginx
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - big-lebowski-fe
      secretName: big-lebowski-fe.local-tls
status:
  loadBalancer:
    ingress:
      - hostname: big-lebowski-fe.fawn-mamba.ts.net
        ports:
          - port: 443
            protocol: TCP
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  labels:
    tailscale.com/proxy-class: "jscknet"
  name: green-knight-ingress
spec:
  ingressClassName: tailscale
  rules:
    - host: green-knight-fe
      http:
        paths:
          - backend:
              service:
                name: fluidd-nginx
                port:
                  number: 8081
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - green-knight-fe
      secretName: green-knight-fe.local-tls
status:
  loadBalancer:
    ingress:
      - hostname: green-knight-fe.fawn-mamba.ts.net
        ports:
          - port: 443
            protocol: TCP
